--- a/src/components/Header/index.scss
+++ b/src/components/Header/index.scss
@@ -114,14 +114,24 @@ $profile-hover-color: #efe6f8;
     float: right;
 
     [class*='target'] {
-      margin: 12px 24px;
-      height: 20px;
+      margin: 16px 0 16px 8px;
+      height: 16px;
       width: auto;
-      line-height: 20px;
+      line-height: 16px;
+      font-size: 14px;
       opacity: 0.9;
       color: $N500;
       font-weight: 500;
       border: 0 none;
+
+      .icon {
+        float: right;
+        margin-left: 2px;
+        svg {
+          --primary-color: #{$N500};
+          --secondary-color: #{$N500};
+        }
+      }
 
       &:hover{
         border: 0 none;
@@ -129,23 +139,11 @@ $profile-hover-color: #efe6f8;
         opacity: 1;
       }
     }
-    :global{
-      .icon-caret-down{
-        position: relative;
-        top: 3px;
-        left: 2px;
-        svg {
-          --primary-color: #{$N500};
-          --secondary-color: #{$N500};
-        }
-      }
-    }
   }
-
 
   :global{
     .pi-popover-popper{
-      margin-left: -40px !important;
+      margin-left: -95px !important;
       margin-top: 6px !important;
     }
   }
@@ -154,21 +152,6 @@ $profile-hover-color: #efe6f8;
 .deepInner,
 .deepHome {
   position: fixed;
-
-  .login{
-    color: $N0;
-  }
-
-  .user [class*='target']{
-    color: $N0;
-
-    :global{
-      .icon-caret-down svg{
-        --primary-color: #{$N0};
-        --secondary-color: #{$N0};
-      }
-    }
-  }
 }
 
 .deepHome {
@@ -178,6 +161,19 @@ $profile-hover-color: #efe6f8;
   animation-iteration-count: 1;
   animation-timing-function: ease-in-out;
   animation-fill-mode: forwards;
+
+  .login {
+    color: $N0;
+  }
+
+  .user [class*='target']{
+    color: $N0;
+
+    .icon svg{
+      --primary-color: #{$N0};
+      --secondary-color: #{$N0};
+    }
+  }
 }
 
 .deepInner {
@@ -208,14 +204,62 @@ $profile-hover-color: #efe6f8;
       line-height: 16px;
       color: $N65;
 
+      &:hover {
+        color: $N30;
+      }
+
       &.active {
         font-weight: 500;
         color: $N10;
       }
     }
   }
+
+  .user [class*='target'] {
+    font-size: 12px;
+    color: $N65;
+    opacity: 1;
+
+    .icon svg{
+      --primary-color: #{$N65};
+      --secondary-color: #{$N65};
+    }
+
+    &:hover {
+      color: $N30;
+
+      .icon svg {
+        --primary-color: #{$N30};
+        --secondary-color: #{$N30};
+      }
+    }
+  }
+
+  .mail {
+    float: right;
+    margin: 14px 8px;
+  }
+
+  .upgrade {
+    float: right;
+    margin: 16px 8px;
+    line-height: 16px;
+    font-size: 12px;
+    font-weight: 500;
+    color: $Y100;
+
+    .shield {
+      float: left;
+      margin-right: 4px;
+      svg {
+        --primary-color: #{$Y100};
+        --secondary-color: #{$Y100};
+      }
+    }
+
+    &:hover {
+      color: $Y65;
+    }
+  }
 }
 
-.menuOuter {
-
-}
