--- a/src/components/Base/Modal/index.scss
+++ b/src/components/Base/Modal/index.scss
@@ -54,7 +54,7 @@
             height: 32px;
             border-radius: 2px;
             background-color: $N0;
-            box-shadow: 0 1px 2px 0 rgba(109, 53, 195, 0.15);
+            // box-shadow: 0 1px 2px 0 rgba(109, 53, 195, 0.15);
           }
           & > textarea{
             box-sizing: border-box;
