fix: App skip url according to role

--- a/src/components/Statistics/index.scss
+++ b/src/components/Statistics/index.scss
@@ -24,6 +24,12 @@
         margin-right: 48px;
       }
     }
+
+    &:last-child {
+      .word {
+        margin-left: 10%;
+      }
+    }
   }
 
   .apps{
