--- a/src/components/Base/Select/index.scss
+++ b/src/components/Base/Select/index.scss
@@ -69,13 +69,14 @@
   position: absolute;
   z-index: 11;
   width: 100%;
-  //max-height: 200px;
+  max-height: 300px;
   margin-top: 8px;
   padding: 8px 0;
   border-radius: 2px;
   background-color: $N0;
   box-shadow: 0 1px 4px 0 rgba(73, 33, 173, 0.1), 0 4px 8px 0 rgba(35, 35, 36, 0.08);
   border: solid 1px $N30;
+  overflow-y: auto;
   .option {
     position: relative;
     box-sizing: border-box;
