--- a/src/components/MenuLayer/index.scss
+++ b/src/components/MenuLayer/index.scss
@@ -1,19 +1,18 @@
-@import "~scss/vars";
+@import '~scss/vars';
 
 .menuLayer {
-  min-width: 130px;
+  min-width: 140px;
 
   li {
+    height: 32px;
+
     > a,
     > label {
       display: block;
-      height: 32px;
-      padding: 0 12px;
-      //width: 100%;
       line-height: 32px;
-      font-size: $font14;
+      font-size: 12px;
       font-weight: normal;
-      color: $N300;
+      color: $N300 !important;
       border-radius: 0;
       cursor: pointer;
 
@@ -23,16 +22,81 @@
       }
     }
 
-    &.line{
-      border-bottom: 1px solid $N10;
+    .iconImg {
+      float: left;
+      margin: 8px 8px 8px 15px;
     }
 
-    .icon {
-      float: left;
-      position: relative;
-      top: 4px;
-      margin-right: 4px;
+    &:hover {
+      a {
+        color: $N500;
+      }
+    }
+
+    &:first-child {
+      padding: 12px 15px 15px;
+      font-size: 16px;
+      line-height: 32px;
+      font-weight: 500;
+      color: $N500;
+      border-bottom: 1px solid $N10;
+
+      .userIcon {
+        float: left;
+        display: inline-block;
+        margin-right: 8px;
+        width: 32px;
+        height: 32px;
+        background-color: $N10;
+        border-radius: 50%;
+
+        .iconImg {
+          margin: 0;
+          svg {
+            --primary-color: #{$N300};
+            --secondary-color: #{$N45};
+          }
+        }
+      }
+
+      .devIconOuter {
+        display: inline-block;
+        position: relative;
+        margin-left: 4px;
+        width: 12px;
+        height: 12px;
+        border-radius: 50%;
+        background-color: $P75;
+
+        .devIcon {
+          position: absolute;
+          left: 2px;
+          top: 2px;
+          line-height: 0px;
+          svg {
+            --primary-color: #{$N0};
+            --secondary-color: #{$N0};
+            --primary-opacity: 0.9;
+            --secondary-opacity: 0.4;
+          }
+        }
+      }
+    }
+
+    &.dev {
+      height: 40px;
+      > label {
+        line-height: 40px;
+      }
+      border-bottom: 1px solid $N10;
+
+      .iconImg {
+        margin: 12px 8px 12px 15px;
+      }
+    }
+
+    &:last-child {
+      border-top: 1px solid $N10;
     }
   }
 }
-
