# This is a combination of 4 commits. # This is the 1st commit message:
feat: Add v0.4 version and detail pages

# This is the commit message #2:

fix: Modify code style

# This is the commit message #3:

fix: Modify code style

# This is the commit message #4:

feat: Add simulation info check process

--- a/src/scss/_mixins.scss
+++ b/src/scss/_mixins.scss
@@ -74,3 +74,17 @@
     transform: scale(0.8);
   }
 }
+
+
+@mixin rotate-frames() {
+  0% {
+    -webkit-transform:rotate(0deg);
+    transform:rotate(0deg);
+  }
+  100% {
+    -webkit-transform:rotate(360deg);
+    transform:rotate(360deg);
+  }
+}
+@-webkit-keyframes rotate {@include rotate-frames;}
+@keyframes rotate {@include rotate-frames;}
