--- a/src/pages/Home/index.scss
+++ b/src/pages/Home/index.scss
@@ -53,7 +53,7 @@
         border-bottom: 2px solid rgba($purple-light,0.2);
         border-left: 2px solid rgba($purple-light,1);
         transform: translateZ(0);
-        animation:load 1.1s infinite linear;
+        animation:rotate 1.1s infinite linear;
       }
     }
   }
@@ -75,16 +75,3 @@
     padding-top: 72px;
   }
 }
-
-@mixin load-frames() {
-  0% {
-    -webkit-transform:rotate(0deg);
-    transform:rotate(0deg);
-  }
-  100% {
-    -webkit-transform:rotate(360deg);
-    transform:rotate(360deg);
-  }
-}
-@-webkit-keyframes load {@include load-frames;}
-@keyframes load {@include load-frames;}
