feat: Add v0.4 version and detail pages

--- a/src/pages/Dashboard/Apps/Versions/Detail/index.scss
+++ b/src/pages/Dashboard/Apps/Versions/Detail/index.scss
@@ -1,188 +1,169 @@
 @import '~scss/vars';
 
-.versions {
-  .title {
-    margin-bottom: 12px;
-    line-height: 20px;
-    font-size: 12px;
-    color: $N75;
+.versionDetail {
+  .topInfo {
+   display: inline-block;
   }
 
-  .addMethod {
-    box-sizing: border-box;
-    margin-bottom: 20px;
-    padding: 0 32px;
-    height: 92px;
-    background-color: $N0;
-
-    &:last-child {
-      margin-bottom: 32px;
-    }
-
-    .name {
-      float: left;
-      padding: 34px 0;
-      width: 98px;
+  .main {
+    margin-bottom: 4px;
+    >label {
       line-height: 24px;
-      font-size: 20px;
-      font-weight: 500;
-      color: $N300;
-      border-right: 1px solid $N10;
+      font-size: 14px;
+      color: $N100;
     }
 
-    .icon {
-      float: left;
-      margin-right: 8px;
-    }
-
-    .versions {
-      padding: 30px 0 30px 30px;
-      height: 32px;
-      overflow: hidden;
-
-      .total {
-        float: left;
-        display: inline-block;
-        margin-right: 28px;
-        line-height: 32px;
-        font-size: 12px;
-        color: $N300;
-      }
-
-      .version {
-        float: left;
-        display: inline-block;
-        box-sizing: border-box;
-        margin-right: 8px;
-        width: 132px;
-        height: 32px;
-        border-radius: 2px;
-        background-color: $B10;
-        padding: 8px 10px;
-        line-height: 16px;
-        font-size: 14px;
-        font-weight: 500;
-        color: $N500;
-        cursor: pointer;
-
-        .dot {
-          float: left;
-          display: inline-block;
-          margin: 5px 10px 5px 8px;
-          width: 6px;
-          height: 6px;
-          border-radius: 50%;
-          background-color: $B75;
-        }
-
-        &.draft {
-          background: $B10;
-          .dot {
-            background-color: $B75;
-          }
-          &:hover {
-            background: $B30;
-          }
-        }
-
-        &.submitted {
-          background: $Y10;
-          .dot {
-            background-color: $Y300;
-          }
-          &:hover {
-            background: $Y30;
-          }
-        }
-
-        &.passed {
-          background-color: $G10;
-          .dot {
-            background-color: $G75;
-          }
-          &:hover {
-            background: $G30;
-          }
-        }
-
-        &.active {
-          background: $P10;
-          .dot {
-            background-color: $P75;
-          }
-          &:hover {
-            background: $P30;
-          }
-        }
-
-        &.suspended {
-          background: $N10;
-          .dot {
-            background-color: $N500;
-          }
-          &:hover {
-            background: $N30;
-          }
-        }
-
-        &.rejected {
-          background: $R10;
-          .dot {
-            background: $R200;
-          }
-          &:hover {
-            background: $R30;
-          }
-        }
-      }
-    }
-  }
-
-  .otherMethod {
-    position: relative;
-    margin-bottom: 20px;
-    padding: 24px;
-    border: 1px solid $N10;
-
-    .name {
-      margin-bottom: 4px;
-      height: 20px;
+    .value {
+      margin-right: 24px;
       font-size: 16px;
-      font-weight: 500;
+      font-weight: 600;
       color: $N500;
     }
+  }
 
-    .icon {
+  .secondary {
+    >label {
+      display: inline-block;
+      margin-right: 40px;
+      line-height: 20px;
+      font-size: 12px;
+      color: $N65;
+    }
+
+    .status {
+      display: inline-block;
+    }
+  }
+
+  .operateBtns {
+    float: right;
+    margin-top: 8px;
+
+    .operation {
+      float: right;
+      display: inline-block;
+      margin-left: 12px;
+    }
+  }
+
+  .confgFile {
+    padding: 0 40px 32px;
+    background-color: $N0;
+    border-radius: 2px;
+    box-shadow: 0 1px 4px 0 rgba(73, 33, 173, 0.06), 0 4px 8px 0 rgba(35, 35, 36, 0.04);
+
+    .file {
+      padding: 20px 0;
+      height: 184px;
+      text-align: center;
+
+      .name {
+        margin: 46px 0 20px;
+        line-height: 20px;
+        font-size: 14px;
+        font-weight: 500;
+      }
+
+      .time {
+        height: 20px;
+        font-size: 12px;
+        color: $N65;
+      }
+
+      .link {
+        display: inline-block;
+        margin-left: 20px;
+        color: $P75;
+        cursor: pointer;
+      }
+    }
+
+    .document {
+      margin-top: 20px;
+      line-height: 20px;
+      font-size: 12px;
+      color: $N65;
+
+      .note {
+        float: left;
+        margin-right: 8px;
+        display: inline-block;
+        width: 32px;
+        height: 20px;
+        border-radius: 1px;
+        background-color: $N30;
+        color: $N100;
+        text-align: center;
+      }
+
+    }
+  }
+}
+
+.submitCheck {
+  .title {
+    margin-bottom: 25px;
+    line-height: 20px;
+    font-size: 14px;
+    font-weight: 500;
+    color: $N300;
+  }
+
+  li {
+    line-height: 20px;
+    margin-bottom: 18px;
+
+    .status {
       float: left;
+      display: inline-block;
+      margin-top: 4px;
       margin-right: 8px;
+      width: 12px;
+      height: 12px;
+      background-color: $N10;
+      border-radius: 50%;
+    }
+
+    .name {
+      display: inline-block;
+      margin-right: 8px;
+      font-size: 14px;
+      color: $N100;
     }
 
     .description {
-      padding-left: 28px;
-      line-height: 20px;
       font-size: 12px;
-      color: $N75;
+      color: $N65;
     }
 
-    .button {
-      display: none;
-      position: absolute;
-      top: 29px;
-      right: 24px;
+    &.start {
+      background-image: conic-gradient(rgba(255, 255, 255, 0), $N300, rgba(255, 255, 255, 0));
     }
 
-    .addIcon {
-      float: left;
-      margin-right: 4px;
-    }
-
-    &:hover {
-      background-color: $N0;
-      border-color: $P75;
-
-      .button {
-        display: inline-block;
+    &.info {
+      .status {
+        background-color: $Y65;
       }
+      .name {
+        color: $Y300;
+      }
+    }
+
+    &.success {
+      .status {
+        background-color: $G65;
+      }
+      .name {
+        color: $N500;
+      }
+    }
+  }
+
+  .operateBtns {
+    margin: 30px 0 10px;
+    text-align: right;
+    button {
+      margin-left: 12px;
     }
   }
 }
