--- a/src/components/CheckFiles/index.scss
+++ b/src/components/CheckFiles/index.scss
@@ -1,20 +1,27 @@
-.list{
-  margin-left: 192px;
-  line-height: 14px;
-  .item{
-    line-height: 20px;
-    margin-bottom: 10px;
-    span {
-      display: inline-block;
-      width: 80%;
-      margin-left: 10px;
-    }
-    .inputSmall{
-      width: 124px;
-      margin-right: 12px;
+@import "~scss/vars";
+
+.checkFiles {
+  li {
+    margin-bottom: 8px;
+    line-height: 32px;
+    box-shadow: 0 1px 0 0 $N10;
+    font-size: 12px;
+
+    &.none {
+      opacity: 0.5;
     }
   }
-  .removeBtn{
-    //font-weight: bold;
+
+  .name {
+    float: left;
+    display: inline-block;
+    height: 32px;
+    width: 30%;
+    color: $N300;
+  }
+
+  .description {
+    width: 70%;
+    color: $N75;
   }
 }
