--- a/src/components/AppImages/index.scss
+++ b/src/components/AppImages/index.scss
@@ -28,6 +28,9 @@
         border-radius: 50%;
         vertical-align: middle;
       }
+      .img {
+        border-radius: 50%;
+      }
     }
 
     :global{
